<resources>
    <string name="app_name">evraz_history</string>
    <string name="desc1">Evraz plc (Evraz, Evraz Group) — международная вертикально-интегрированная металлургическая и горнодобывающая компания с активами в Российской Федерации, США, Канаде, Чехии, Италии, Казахстане. Штаб-квартира — в Лондоне. Входит в число крупнейших производителей стали в мире. Собственная база железной руды и коксующегося угля практически полностью обеспечивает внутренние потребности ЕВРАЗа. Компания входит в ведущий индекс Лондонской Фондовой Биржи FTSE-100. ЕВРАЗ объединяет около 80 000 сотрудников по всему миру.</string>
    <string name="desc2">Александр Абрамов</string>
    <string name="desc3">Председатель Совета директоров Комитет по назначениям Назначение: входит в состав Совета директоров с апреля 2005 года. До 1 января 2006 года занимал должность президента и председателя Совета директоров Evraz Group S.A., затем продолжил исполнять обязанности председателя Совета директоров до 1 мая 2006 года. С мая 2006 года являлся неисполнительным директором до повторного назначения председателем Совета директоров 1 декабря 2008 года. Избран председателем Совета директоров EVRAZ plc 14 октября 2011 года.</string>
    <string name="desc4">Александр Фролов</string>
    <string name="desc5">Президент Комитет по охране труда, здоровья и и окружающей среды (ОТ, З и ОС) Назначение: входит в состав Совета директоров с апреля 2005 года. Исполнял обязанности председателя Совета директоров Evraz Group S.A. с мая 2006 по декабрь 2008 года. В январе 2007 года назначен президентом Компании. Президентом EVRAZ plc назначен 14 октября 2011 года. Участие в работе комитетов: является членом Комитета по охране труда, здоровья и окружающей среды.</string>
    <string name="desc6">Евгений Швидлер</string>
    <string name="desc7">Неисполнительный директор Комитет по назначениям\n\nНазначение: входит в состав Совета директоров Evraz Group S.A. с августа 2006 года. Избран в Совет директоров EVRAZ plc 14 октября 2011 года.\nУчастие в работе комитетов: является членом Комитета по назначениям.</string>
    <string name="desc8">Евгений Тененбаум</string>
    <string name="desc9">Неисполнительный директор\nНазначение: входит в состав Совета Назначение: входит в состав Совета директоров Evraz Group S.A. с августа 2006 года. Избран в Совет директоров EVRAZ plc 14 октября 2011 года.\n\nУчастие в работе комитетов: нет.</string>
    <string name="desc10">Лори Арго</string>
    <string name="desc11">Независимый неисполнительный директор Комитет по аудиту Комитет по вознаграждениям\n\nНазначение: избрана независимым неисполнительным членом Совета директоров EVRAZ в августе 2018 года.\n\nУчастие в работе комитетов: является членом Комитета по аудиту и Комитета по вознаграждениям.</string>
    <string name="desc12">Карл Грубер</string>
    <string name="desc13">Независимый неисполнительный директор Комитет по назначениям Председатель комитета по охране труда, здоровья и окружающей средыНазначение: входит в состав Совета директоров Evraz Group S.A. с мая 2010 года. Избран в Совет директоров EVRAZ plc 14 октября 2011 года.Участие в работе комитетов: является председателем Комитета по охране труда, здоровья и окружающей среды, а также членом Комитета по назначениям.</string>
    <string name="desc14">Дебора Гуджен</string>
    <string name="desc15">Независимый неисполнительный директор Председатель комитета по аудиту Комитет по вознаграждениям\n\nНазначение: избрана независимым неисполнительным членом Совета директоров EVRAZ в августе 2018 года.\n\nУчастие в работе комитетов: является членом Комитета по аудиту и Комитета по вознаграждениям.\nНазначение: входит в состав Совета директоров EVRAZ plc с мая 2015 года.\n\nУчастие в работе комитетов: является председателем Комитета</string>
    <string name="desc16">Александр Изосимов</string>
    <string name="desc17">Независимый неисполнительный директор Комитет по аудиту Председатель комитета по вознаграждениям Комитет по назначениям.\nНазначение: избран в Совет директоров EVRAZ plc 28 февраля 2012 года.\n\nУчастие в работе комитетов: является председателем Комитета по вознаграждениям, а также членом комитетов по назначениям и по аудиту.</string>
    <string name="desc18">Сэр Майкл Пит</string>
    <string name="desc19">Старший независимый неисполнительный директор Комитет по вознаграждениям Председатель комитета по назначениям.\nНазначение: избран в Совет директоров EVRAZ plc 14 октября 2011 года.\n\nУчастие в работе комитетов: является председателем Комитета по назначениям, членом Комитета по вознаграждениям.</string>

    <string name="nat1">СТРАТЕГИЯ В ОБЛАСТИ ОХРАНЫ ОКРУЖАЮЩЕЙ СРЕДЫ</string>
    <string name="nat2">ЕВРАЗ занимается вопросами окружающей среды на стратегическом уровне, поэтому наши цели, связанные с экологией, составляют критически важную часть задач Группы.</string>
    <string name="nat3">Основное внимание в нашей деятельности сосредоточено на рациональном водопользовании, переработке и утилизации отходов и снижении выбросов в атмосферу, поскольку именно эти направления подвержены наибольшему неблагоприятному воздействию в процессе металлургического производства. В 2017 году Комитет по ОТ, ПБ и Э утвердил три основные цели в сфере окружающей среды, связанные с указанной проблематикой, на пятилетний период, а также ряд программ, направленных на улучшение экологических показателей в целом.</string>
    <string name="nat4">Задачи ЕВРАЗа в сфере охраны окружающей среды на пятилетний период\nНаправление  Задача на пятилетний период</string>
    <string name="nat5">(2018–2022 годы)  Результаты 2018 года\nСокращение потребления свежей воды  На 10%  На 29,1%\nУтилизация отходов, не являющихся отходами горнодобывающей промышленности До 95% в год 111,3% в год\nНепревышение уровня интенсивности выбросов парниковых газов Удерживать уровень интенсивности выбросов ниже 2 т CO2-эквивалента на тонну отлитой стали  2005т CO2-эквивалента на тонну отлитой стали.\n\nК концу 2018 года Группа достигла заметного прогресса в достижении целевых показателей потребления воды: потребление свежей воды снизилось на 29,1%. Переработка отходов (за исключением отходов горнодобывающей промышленности) в целом составила 111,3% по сравнению с 104,7% в предыдущем году. Нам удалось снизить интенсивность выбросов парниковых газов на 1%, и мы уверенно идем к достижению своей цели, установленной на пятилетний период.</string>

    <string name="hist1">Создание группой российских ученых и инженеров компании «ЕвразМеталл», которая специализируется на торговле стальной продукцией и поставках сырья и оборудования для российских сталелитейных заводов. Начало истории ЕВРАЗа.</string>
    <string name="hist2">Приобретение Нижнетагильского металлургического комбината (ЕВРАЗ НТМК) и Западно-Сибирского металлургического комбината (сейчас является частью объединенного ЕВРАЗ ЗСМК).</string>
    <string name="hist3">Приобретение Высокогорского горно-обогатительного комбината (ВГОКа).</string>
    <string name="hist4">Приобретение Новокузнецкого металлургического комбината (сейчас является частью объединенного ЕВРАЗ ЗСМК) и Находкинского морского торгового порта.</string>
    <string name="hist5">Приобретение Качканарского горно-обогатительного комбината (ЕВРАЗ КГОК) и компании «Евразруда», которая включает несколько горнодобывающих и горно-обогатительных предприятий в Сибири.</string>
    <string name="hist6">Приобретение предприятий Palini e Bertoli в Италии. Глобальные депозитарные расписки (ГДР) ЕВРАЗа начинают торговаться на Лондонской фондовой бирже.</string>
    <string name="hist7">Приобретение 73% акций компании Strategic Minerals Corporation — одного из ведущих мировых производителей ванадиевых и титановых сплавов и химикатов.</string>
    <string name="hist8">Получение полного пакета акций угольной компании «Южкузбассуголь», а также приобретение металлургической компании Oregon Steel Mills в США (сейчас является частью EVRAZ North America). Покупка пакета акций в Nikom — производителе феррованадия в Чехии. Приобретение предприятий на Украине и в Южной Африке.</string>
    <string name="hist9">Приобретение мощностей по производству листа и труб компании IPSCO в Канаде (в настоящее время — часть EVRAZ North America).</string>
    <string name="hist10">Приобретение компании «Карбофер Металл», одного из крупнейших российских сетевых дистрибьюторов металлопродукции, а также завода «Ванадий Тула» — одного из ведущих мировых производителей феррованадия.</string>
    <string name="hist11">Получение права на разработку Межегейского угольного месторождения в Республике Тыва. Приобретение ОАО «ИНПРОМ» — одной из ведущих металлосервисных компаний России.</string>
    <string name="hist12">Получение премиального листинга на Лондонской фондовой бирже и вхождение в ведущий индекс Лондонской фондовой биржи — FTSE</string>
    <string name="hist13">20-летие ЕВРАЗа. Представление новой стратегии, направленной на устойчивое развитие предприятий Компании по всему миру.</string>
    <string name="hist14">Получение косвенного контроля над ОАО «Распадская». Ввод в эксплуатацию завода по производству мелкосортного проката в Костанае (Республика Казахстан). Приобретение пакета акций в железорудном проекте «Тимир». Продажа Высокогорского ГОКа.</string>
    <string name="hist15">Начало выпуска 100-метровых рельсов (впервые в России).</string>
    <string name="hist16">Проведение реконструкции Шерегешского рудника, увеличение мощности добычи в два раза. Продажа и выход из нестратегических активов в США и Южной Африке.</string>
    <string name="hist17">Начало промышленной добычи угля на новой шахте ЕВРАЗа — «Межегейуголь» (Республика Тыва).</string>
    <string name="hist18">25-летие ЕВРАЗа. Утверждение новой дивидендной политики, соответствующей лучшим отраслевым бенчмаркам. Продажа Находкинского морского торгового порта и ряда предприятий на Украине.</string>
    <string name="hist19">Представление пятилетней стратегии развития, включающей крупные инвестиционные проекты в России и США. Завершение выхода из активов на Украине.</string>
    <string name="hist20">Начинается подготовка к разработке Собственно-Качканарского месторождения. Продажа Stratcor в США и Palini e Bertoli в Италии.</string>

</resources>
